# Deep-Learning-Deployment-on-NVIDIA-Jetson-with-MATLAB-and-ROS

./: .gitattributes  .gitignore  LICENSE  README.md
Classification/: README.md  myClassifier.m  myClassifierGPU.m  myClassifierGPU_generation_script.m  saveNetworkToFile.m  testClassifier.m  visualizeROSClassifier.m  visualizeROScamera.m
Classification/JetsonCode/ucsp_classify_nn/: CMakeLists.txt  package.xml
Classification/JetsonCode/ucsp_classify_nn/launch/: classifier_usb.launch
Classification/JetsonCode/ucsp_classify_nn/src/: classifier.cpp  classifier.hpp
Classification/Models/: mnistCNN.mat  resnet18.mat  resnet50.mat  vgg16.mat
MNIST/: mnistDeployment.m  mnistDetection.m  mnistLive.m  sobelEdgeDeployment.m  sobelEdgeDetection.m  trainingMNIST.m  trainingMNIST_MLP.m
MNIST/Models/: mnistMLP.mat  mnistNet.mat
ObjectDetection/: README.md  myDetector.m  myDetectorGPU.m  myDetectorGPU_generation_script.m  saveDetectorToFile.m  testDetector.m  visualizeROSDetector.m
ObjectDetection/JetsonCode/ucsp_detect_nn/: CMakeLists.txt  package.xml
ObjectDetection/JetsonCode/ucsp_detect_nn/launch/: detector_usb.launch
ObjectDetection/JetsonCode/ucsp_detect_nn/src/: detector.cpp  detector.hpp
ObjectDetection/Models/: best.onnx  yoloV4_coco.mat
Original/: README.md
Original/AlexNetOriginal/: alexnet.mat  classNames.mat  myAlexNet.m  myAlexNetGPU.m  myAlexNetGPU.prj  myAlexNetGPU_generation_script.m  saveAlexNetToFile.m  testAlexNet.m  visualizeROSData_DEMO.m
Original/JetsonCodeOriginal/: CMakeLists.txt  alexnet.cpp  alexnet.hpp  alexnet_usb.launch  package.xml
TrainCustomModels/: README.md  coco2table.m  convertDataset.m  formatForYOLO.m  preprocessDataYOLOv4.m  runYOLOv4.m  trainBoxesYOLOv4.m  trainedDetectorYOLOv4.mat  webcamPredict.m
TrainCustomModels/datasets/cubes/test/: _annotations.coco.json  test.rar  test_cocoTable.mat
TrainCustomModels/datasets/cubes/train/: _annotations.coco.json  train.rar  train_cocoTable.mat
TrainCustomModels/datasets/cubes/valid/: _annotations.coco.json  valid.rar  valid_cocoTable.mat
