<?xml version="1.0"?>
<package format="2">
  <name>ucsp_classify_nn</name>
  <version>1.0.0</version>
  <description>
    Package para despliegue de código CUDA/ARM generado por GPU Coder
    (clasificación genérica) en NVIDIA Jetson Nano.
  </description>

  <maintainer email="roboticsarena@mathworks.com">
    MATLAB and Simulink Robotics Arena
  </maintainer>
  <license>BSD</license>

  <!-- Herramienta de compilación -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencias para compilar -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <!-- Exportar dependencias de compilación -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>usb_cam</exec_depend>
</package>
